01-operator/02-deploy-app-in-kubernetes/app-deployer/app/src/kube-resources/01-namespace.yaml
  
apiVersion: v1
kind: Namespace
metadata:
  name: g-app-deploy-greetings-pro
  labels:
    app:  g-app-deploy-greetings-app
