01-operator/02-deploy-app-in-kubernetes/app-deployer/app/src/kube-resources/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__-service
  namespace: __NAMESPACE__
  labels:
    app: __APP_NAME__-app
    name: __APP_NAME__-service
spec:
  ports:
    - name: main-container
      port: 8080
      targetPort: __CONTAINER_PORT__
  selector:
    name: __APP_NAME__-deployment
